--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@
 # Ignore uploaded files in development
 /storage/*
 !/storage/.keep
-
 /node_modules
 /yarn-error.log
 
@@ -29,3 +28,6 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+
+.DS_Store
